# src/order-service/internal/delivery/http/dto/order_request.go
@@ -1,0 +1,5 @@
+package dto
+
+type CreateOrderRequest struct {
+	Amount int64 `json:"amount"`
+}
