# src/order-service/internal/docs/swagger.yaml
@@ -1,5 +1,10 @@
 basePath: /v1
 definitions:
+  dto.CreateOrderRequest:
+    properties:
+      amount:
+        type: integer
+    type: object
   dto.ErrorResponse:
     properties:
       error:
@@ -98,6 +103,44 @@ paths:
           schema:
             $ref: '#/definitions/dto.ErrorResponse'
       summary: Get all orders for user
+      tags:
+      - orders
+    post:
+      consumes:
+      - application/json
+      description: Creates a new order, a message is sent to payment service
+      parameters:
+      - description: User ID (UUID)
+        in: header
+        name: X-User-ID
+        required: true
+        type: string
+      - description: Request to create an order
+        in: body
+        name: order_request
+        required: true
+        schema:
+          $ref: '#/definitions/dto.CreateOrderRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/dto.OrdersResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/dto.ErrorResponse'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/dto.ErrorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/dto.ErrorResponse'
+      summary: Create an order
       tags:
       - orders
   /orders/{id}:
